@@ -1,4 +1,7 @@
 Changes with Apache 1.3.23
+  *) HPUX 11.*: Do not kill the child process when accept() 
+     returns ENOBUFS on HPUX 11.*.
+     [madhusudan_mathihalli@hp.com]
 
   *) PORT: Numerous additions to Cygwin, including: defaulting
      to Posix thread accept mutex, excluding the call to
